[metadata]
name = PyPl8
version = 1.0.0
author = Katherine Ownes
author_email = kowens@pnri.org
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lacyk3/PyPl8
project_urls =
    Bug Tracker = https://github.com/lacyk3/PyPl8/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
[options]
packages = PyPl8
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    scikit-image
    opencv-python
    pyzbar
    Ipython
